--- a/07-recursos-e-componentes/composer.json
+++ b/07-recursos-e-componentes/composer.json
@@ -22,6 +22,7 @@
         ]
     },
     "require": {
-        "phpmailer/phpmailer": "~6.0"
+        "phpmailer/phpmailer": "~6.0",
+        "league/plates" : "~v3.0"
     }
 }
