--- a/07-recursos-e-componentes/composer.json
+++ b/07-recursos-e-componentes/composer.json
@@ -23,6 +23,7 @@
     },
     "require": {
         "phpmailer/phpmailer": "~6.0",
-        "league/plates" : "~v3.0"
+        "league/plates" : "~v3.0",
+        "coffeecode/uploader": "2.0.*"
     }
 }
