--- a/07-recursos-e-componentes/composer.json
+++ b/07-recursos-e-componentes/composer.json
@@ -25,6 +25,7 @@
         "phpmailer/phpmailer": "~6.0",
         "league/plates" : "~v3.0",
         "coffeecode/uploader": "2.0.*",
-        "coffeecode/cropper": "2.0.*"
+        "coffeecode/cropper": "2.0.*",
+        "coffeecode/optimizer": "2.1.*"
     }
 }
